--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -168,6 +168,7 @@ body {
 
 #edit-profile.offcanvas,
 #message-details.offcanvas,
+#mypost-feed.offcanvas,
 #edit-product.offcanvas,
 #add-product.offcanvas,
 #edit-store.offcanvas,
@@ -2648,6 +2649,7 @@ input[type=number] {
 .share-profile {
     width: 50px;
     height: 50px;
+    flex-shrink: 0;
 }
 
 .share-profile img {
@@ -3268,4 +3270,109 @@ input[type=number] {
     font-size: 18px;
     font-weight: 600;
     color: #1F3D4F;
+}
+
+.myprofile-user img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+    border: 2px solid #BFBFBF
+}
+
+.nameofuser h5 {
+    font-size: 14px;
+    font-weight: 600;
+    color: #1A1A1ACC;
+}
+
+.nameofuser .spantime {
+    font-size: 12px;
+    font-weight: 400;
+    color: #1A1A1ACC;
+}
+
+.ri-heart-fill {
+    color: #F85074 !important;
+}
+
+.support-p {
+    font-size: 16px;
+    font-weight: 600;
+    color: #1A1A1ACC;
+}
+
+.support-p a {
+    font-weight: 800;
+    color: #002E3E;
+}
+
+.support-form h5 {
+    font-size: 18px;
+    font-weight: 300;
+    color: #A9A9A9;
+}
+
+#supporttext {
+    padding: 16px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    background: #F9FAFA;
+    border: 0;
+    outline: 0;
+    width: 100%;
+    height: 227px;
+}
+
+.support-send {
+    padding: 17px 34px 17px 34px;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+    background: #E8E8E8;
+    font-size: 18px;
+    font-weight: 500;
+    color: #B3B3B3;
+    outline: 0;
+    border: 0;
+}
+
+.social-iconss {
+    display: flex;
+    gap: 22px;
+    align-items: center;
+}
+
+.social-iconss img {
+    box-shadow: 0px 2.63px 19.74px 0px #00000008;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    width: 50px;
+    height: 50px;
+}
+
+.my-image {
+    transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+}
+
+.remove-posts {
+    opacity: 0;
+    transition: 0.5s ease;
+    visibility: hidden;
+}
+
+.my-image:hover .remove-posts {
+    opacity: 1;
+    visibility: visible;
 }
