--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1599,7 +1599,7 @@ form label {
 }
 
 .create-store {
-    background: url('../images/create-bg.svg');
+    /* background: url('../images/create-bg.svg'); */
     height: 100%;
     background-repeat: no-repeat;
     background-position: top right;
@@ -3418,4 +3418,33 @@ input[type=number] {
 
 .specific-header {
     flex-wrap: wrap;
+}
+
+.restrict-paragraph {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    word-break: break-all;
+    -webkit-box-orient: vertical;
+    white-space: normal !important;
+    font-size: 16px;
+    font-weight: 500;
+    color: #3E3E3E;
+}
+
+.px-16 {
+    padding-inline: 40px;
+}
+
+.stylis-bag p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #3E3E3E;
+}
+
+.stylis-bag h1 {
+    font-size: 46px;
+    font-weight: 400;
+    color: #000000;
 }
