--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1310,6 +1310,8 @@ footer {
     font-size: 32px;
     font-weight: 700;
     color: var(--heading-text);
+    font-size: 46px;
+    font-weight: 400;
 }
 
 .blog-image {
@@ -3447,4 +3449,77 @@ input[type=number] {
     font-size: 46px;
     font-weight: 400;
     color: #000000;
+}
+
+.namedate p,
+.namedate span,
+.credit span {
+    font-size: 18px !important;
+    font-weight: 400 !important;
+}
+
+.suggest-read {
+    font-size: 24px;
+    font-weight: 700;
+    color: #1A1A1A;
+}
+
+.terms-detail b {
+    font-size: 22px;
+    font-weight: 600;
+    color: #1C1C1C;
+}
+
+.terms-detail p {
+    font-size: 18px;
+    font-weight: 400;
+    color: #3E3E3E;
+}
+
+.see-all {
+    padding: 10px 16px 10px 16px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    background: #FDFDFD;
+    border: 1px solid #E4E4E7;
+    box-shadow: 0px 1px 3px 0px #00000014;
+    font-size: 16px;
+    font-weight: 600;
+    color: #1A1A1A;
+}
+
+.exclusive-store-heading h4 {
+    font-size: 56px;
+    font-weight: 500;
+    color: #191919;
+}
+
+.exclusive-store-heading p {
+    font-size: 16px;
+    font-weight: 500;
+    color: #868686;
+}
+
+@media(max-width:768px) {
+    .exclusive-store-heading h4 {
+        font-size: 40px;
+        font-weight: 500;
+        color: #191919;
+    }
+}
+
+.exclus-store h4 {
+    font-size: 18px;
+    font-weight: 500;
+    color: #1A1A1A;
+    margin-bottom: 4px;
+}
+
+.exclus-store p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #868686;
 }
