--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -3427,7 +3427,7 @@ input[type=number] {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    word-break: break-all;
+    /* word-break: break-all; */
     -webkit-box-orient: vertical;
     white-space: normal !important;
     font-size: 16px;
